# cpp_allocators

./: CMakeLists.txt  LICENSE  README.md
performance_tests/: CMakeLists.txt  main.cpp  random_size_allocation_test.h  test_base.cpp  test_base.h
src/: CMakeLists.txt  main.cpp
src/brh/allocators/: affix_allocator.h  bitmapped_block.h  fallback_allocator.h  free_list.h  full_free_list.h  malloc_allocator.h  segregator.h  size_fail_allocator.h  stack_allocator.h
src/brh/allocators/blocks/: block.h  unique_block.h
src/brh/allocators/common/: common_types.h  free_list_node.h
src/brh/allocators/multithread/: thread.h
src/brh/allocators/traits/: array_interface.h  traits.h
src/brh/allocators/wrappers/: allocator_singleton.h  allocator_wrapper.h  container_interface.h  smart_allocator.h
src/bridgerrholt/allocator_test/: allocator_singleton.h  allocator_wrapper.h  block.cpp  block.h  common_types.h  construct.h  round_to_aligned.cpp  round_to_aligned.h  smart_allocator.h  unique_block.h
src/bridgerrholt/allocator_test/allocators/: bitmapped_block.h  fallback_allocator.h  free_list.h  full_free_list.h  malloc_allocator.h  segregated_storage.h  segregator.h  simple_allocator.h  stack_allocator.h
src/bridgerrholt/allocator_test/allocators/common/: free_list_node.h  round_up_to_multiple.h
src/bridgerrholt/allocators/: affix_allocator.h  bitmapped_block.cpp  bitmapped_block.h  fallback_allocator.h  free_list.h  full_free_list.h  malloc_allocator.h  segregator.h  simple_allocator.h  size_fail_allocator.h  stack_allocator.h
src/bridgerrholt/allocators/blocks/: block.h  unique_block.h
src/bridgerrholt/allocators/common/: calc_gcd.h  calc_is_aligned.h  calc_lcm.h  common_types.h  free_list_node.h  round_up_to_multiple.h
src/bridgerrholt/allocators/multithread/: thread.h
src/bridgerrholt/allocators/traits/: array_interface.h  traits.h
src/bridgerrholt/allocators/wrappers/: allocator_singleton.h  allocator_wrapper.h  smart_allocator.h
tests/: CMakeLists.txt
tests/allocator_containers_test_1/: CMakeLists.txt  main.cpp
tests/corruption_test_0/: CMakeLists.txt  allocator_policy.h  bit_flags.h  block_list.h  generate_instructions.cpp  generate_instructions.h  generation_arg_pack.h  generator_flags.h  instruction.h  instruction_list.h  instruction_output.h  instructions.cpp  instructions.h  main.cpp  stack_generator.cpp  stack_generator.h
tests/corruption_test_1/: CMakeLists.txt  data_handle.h  main.cpp  run_stack_test.cpp  run_stack_test.h
tests/general_test_0/: CMakeLists.txt  main.cpp
tests/multithread_test_0/: CMakeLists.txt  main.cpp
tests/performance_test_0/: CMakeLists.txt  get_time.h  main.cpp  random_instruction_test.h  random_size_allocation_test.h  test_base.cpp  test_base.h  test_factory.h
tests/performance_test_1/: random_instruction_test.h
tests/unrelated_test_0/: CMakeLists.txt  main.cpp
tests/unrelated_test_1/: CMakeLists.txt  main.cpp
tests/unrelated_test_2/: CMakeLists.txt  main.cpp
